# pegasus

./: .gitignore  README.md
cpp/: .gitignore  CMakeLists.txt
cpp/cmake_modules/: BuildUtils.cmake  DefineOptions.cmake  FindArrow.cmake  FindArrowFlight.cmake  FindArrowTesting.cmake  FindBoostAlt.cmake  FindParquet.cmake  FindPegasus.cmake  ThirdpartyToolchain.cmake  cmake_fns.txt
cpp/src/pegasus/: CMakeLists.txt  PegasusConfig.cmake.in  PegasusTestingConfig.cmake.in  pegasus-testing.pc.in  pegasus.pc.in  symbols.map
cpp/src/pegasus/benchmark/: CMakeLists.txt  benchmark.cc
cpp/src/pegasus/cache/: CMakeLists.txt  cache_engine.cc  cache_engine.h  cache_entry_holder.cc  cache_entry_holder.h  cache_manager.cc  cache_manager.h  cache_memory_pool.cc  cache_memory_pool.h  cache_region.cc  cache_region.h  cache_store.cc  cache_store.h  cache_store_manager.cc  cache_store_manager.h  dataset_cache_manager.cc  dcpmm_store.cc  dcpmm_store.h  file_store.cc  file_store.h  lru_cache.cc  lru_cache.h  lru_eviction_callback.h  memory_block_holder.cc  memory_block_holder.h  memory_pool.cc  memory_pool.h  memory_store.cc  memory_store.h  store.cc  store.h  store_factory.cc  store_factory.h  store_manager.cc  store_manager.h  store_region.cc  store_region.h
cpp/src/pegasus/catalog/: CMakeLists.txt  catalog.cc  catalog.h  catalog_manager.cc  catalog_manager.h  catalog_test.cc  metadata_manager.cc  metadata_manager.h  pegasus_catalog.cc  pegasus_catalog.h  spark_catalog.cc  spark_catalog.h  table_metadata.cc  table_metadata.h
cpp/src/pegasus/client/: worker-heartbeat.h
cpp/src/pegasus/common/: CMakeLists.txt  atomic.h  compiler-util.h  config.h.cmake  config.h.in  init.cc  init.h  location.cc  location.h  logging.cc  logging.h  names.h  properties.h  request_context.h  server_options.cc  server_options.h  status.cc  status.h  version.cc  version.h  worker_manager.cc  worker_manager.h
cpp/src/pegasus/dataset/: CMakeLists.txt  cache_engine.cc  cache_engine.h  cache_store.cc  cache_store.h  cache_store_manager.cc  cache_store_manager.h  consistent_hashing.cc  consistent_hashing.h  data_request.h  dataset.h  dataset_builder.cc  dataset_builder.h  dataset_cache_block_manager.cc  dataset_cache_block_manager.h  dataset_cache_engine_manager.cc  dataset_cache_engine_manager.h  dataset_cache_manager.cc  dataset_cache_manager.h  dataset_cache_manager_test.cc  dataset_cache_store_manager.cc  dataset_cache_store_manager.h  dataset_distributor.cc  dataset_distributor.h  dataset_listing.h  dataset_request.cc  dataset_request.h  dataset_service.cc  dataset_service.h  dataset_service_test.cc  dataset_store.cc  dataset_store.h  endpoint.cc  endpoint.h  filter.cc  filter.h  flightinfo_builder.cc  flightinfo_builder.h  identity.cc  identity.h  (+6 more)
cpp/src/pegasus/gutil/: CMakeLists.txt  atomicops-internals-x86.h  bind.h  bind_helpers.h  bind_internal.h  callback.h  callback_forward.h  callback_internal.cc  callback_internal.h  gscoped_ptr.h  raw_scoped_refptr_mismatch_checker.h  ref_counted.cc  ref_counted.h  ref_counted_memory.cc  ref_counted_memory.h
cpp/src/pegasus/ipc/: CMakeLists.txt  allocator.cc  allocator.h  dlmalloc.cc  events.cc  events.h  fling.cc  io.cc  io.h  ipc_server.cc  ipc_server.h  malloc.cc  malloc.h  store_config.cc  store_config.h
cpp/src/pegasus/java/: IpcClient.cc  IpcClient.h  LocalMemoryMapping.cc  LocalMemoryMapping.h  org_apache_pegasus_rpc_LocalMemoryMappingJNI.cc  org_apache_pegasus_rpc_LocalMemoryMappingJNI.h
cpp/src/pegasus/lru_cache.cc/: cache_memory_pool.h  cache_region.cc  lru_cache.h.rej  store.cc  store_region.h
cpp/src/pegasus/parquet/: CMakeLists.txt  parquet_metadata.cc  parquet_metadata.h  parquet_raw_data_reader.cc  parquet_raw_data_reader.h  parquet_reader.cc  parquet_reader.h  parquet_reader_test.cc  parquet_scanner.cc  parquet_scanner.h
cpp/src/pegasus/plasma/: .gitignore  CMakeLists.txt  client.cc  client.h  common.cc  common.h  dlmalloc.cc  events.cc  eviction_policy.cc  eviction_policy.h  external_store.cc  external_store.h  fling.cc  hash_table_store.cc  hash_table_store.h  io.cc  io.h  malloc.cc  plasma.cc  plasma.h  plasma_allocator.cc  protocol.cc  protocol.h  quota_aware_policy.cc  quota_aware_policy.h  store.cc  store.h  test_util.h
cpp/src/pegasus/rpc/: CMakeLists.txt  PegasusRPCConfig.cmake.in  PegasusRPCTestingConfig.cmake.in  README.md  api.h  client.cc  client.h  client_auth.h  client_middleware.h  customize_protobuf.h  file_batch.h  file_batch_reader.cc  file_batch_reader.h  flight_test.cc  internal.cc  internal.h  middleware.h  middleware_internal.h  pegasus-rpc-testing.pc.in  pegasus-rpc.pc.in  protocol_internal.cc  protocol_internal.h  serialization_internal.cc  serialization_internal.h  server.cc  server.h  server_auth.cc  server_auth.h  server_middleware.h  test_server.cc  test_util.cc  test_util.h  types.cc  types.h  visibility.h
cpp/src/pegasus/runtime/: CMakeLists.txt  client-cache-types.h  client_cache.cc  client_cache.h  exec_env.cc  exec_env.h  planner_exec_env.cc  planner_exec_env.h  worker_config.h  worker_exec_env.cc  worker_exec_env.h
cpp/src/pegasus/server/: CMakeLists.txt  daemon-main.cc
cpp/src/pegasus/storage/: CMakeLists.txt  file_status.cc  file_status.h  hdfs_storage.cc  hdfs_storage.h  hdfs_storage_plugin.cc  hdfs_storage_plugin.h  storage.h  storage_factory.cc  storage_factory.h  storage_plugin.cc  storage_plugin.h  storage_plugin_factory.cc  storage_plugin_factory.h  storage_plugin_test.cc  storage_test.cc
cpp/src/pegasus/test/: CMakeLists.txt  gtest-util.cc  gtest-util.h
cpp/src/pegasus/util/: CMakeLists.txt  aligned-new.h  alignment.h  arithmetic-util.h  blocking-queue.h  cache.cc  cache.h  compare.h  compiler_util.h  condition-variable.h  conhash.c  conhash_inter.c  consistent_hash_map-test.cc  consistent_hash_map.hpp  consistent_hashing.cc  consistent_hashing.h  cpu-info.cc  cpu-info.h  debug-util.cc  debug-util.h  disk-info.cc  disk-info.h  error-util.cc  error-util.h  faststring.cc  faststring.h  flag_tags.cc  flag_tags.h  flag_validators.cc  flag_validators.h  global_flags.cc  global_flags.h  locks.cc  (+44 more)
(+204 files in other folders)
